--- a/CURS 9/django_config.yaml
+++ b/CURS 9/django_config.yaml
@@ -21,6 +21,9 @@ ToDoProject:
               url_path_name: update
               template_name: update_todo
 
+            - view_name: mark_done_todo
+              url_path_name: mark
+              template_name: mark_done_todo
 
         # Schimba APP_NAME2 cu numele aplicatiei
         # APP_NAME2:
